--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -8,6 +8,9 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="/board">News</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="/#about">About</a>
             </li>
             <li class="nav-item">
@@ -16,9 +19,7 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="/#portfolio">Portfolio</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="/board">Story Board</a>
-            </li>
+
             
             {{#if usernameAuth.username}}
             <li class="nav-item">
