--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,12 +39,21 @@
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
+    <script>
+      $(document).ready(function() {
+        $("#loader").hide();
+    });
+    </script>
   <!-- Custom styles for this template -->
   <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
 </head>
 
 <body id="page-top">
+  <div class="page">
+
   {{> _navbar}} {{{body}}} {{> _toast}}
+  </div>
+  {{> _loader}}
 
 
 
@@ -63,6 +72,12 @@
   <script src="/js/moment.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jodit/3.1.39/jodit.min.js"></script>
   <script>
+
+
+
+
+
+
     var JoditTextArea = document.getElementById('story-dashboard-main');
     if (JoditTextArea) {
       var joditObj = $('.jodit-area');
