--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -35,12 +35,13 @@
   <!-- Custom styles for this template -->
   <link href="/css/creative.min.css" rel="stylesheet">
 
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jodit/3.1.39/jodit.min.css">
-  <script src="/js/jquery-3.3.1.min.js"></script>
 
     <script>
       $(document).ready(function() {
-        $("#loader-screen").hide();
+        $("#loader").hide();
     });
     </script>
   <!-- Custom styles for this template -->
