--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -41,7 +41,7 @@
 
     <script>
       $(document).ready(function() {
-        $("#loader").hide();
+        $("#loader-screen").hide();
     });
     </script>
   <!-- Custom styles for this template -->
