--- a/views/partials/_loader.handlebars
+++ b/views/partials/_loader.handlebars
@@ -1,4 +1,4 @@
-<div class="full-screen" id="#loader-screen">
+<div class="full-screen" id="loader-screen">
   <div id="loader">
   <span></span>
   <span></span>
