--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,9 +2,13 @@
   line-height: 2.15rem;
 }
 
+.hello-wrapper {
+  padding: .5rem 1rem;
+}
+
 .hello {
-  font-size: 1rem;
-  line-height: 2rem;
+  font-size: .9rem;
+  font-weight: 700;
 }
 
 .hello-text {
