--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -28,7 +28,7 @@
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" id="logout" href="">Logout</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item hello-wrapper">
               <h4 class="text-white hello">
                 <span class="hello-text">Hello</span>
               {{usernameAuth.username}}
