--- a/views/board/feed-detail.handlebars
+++ b/views/board/feed-detail.handlebars
@@ -11,13 +11,18 @@
   </div>
 </section>
 <div class="fixed-bottom m-4 side-bar-tool">
+  
   <a style="right: 20px;left: auto" href="javascript:history.back()">
     <i class="fas fa-arrow-left" style="font-size: 32px"></i>
   </a>
   <i id="back-top" class="fas fa-arrow-up" style="font-size: 32px"></i>
   </a>
   <i class="far fa-star {{#if bookmark}}active{{/if}}" style="font-size: 32px; padding: 3px" id="bookmark" data-feed-id="{{feed._id}}" data-userId="{{usernameAuth._id}}"></i>
-
+  {{#if usernameAuth.username}}
+    <a style="right: 20px;left: auto" href="/bookmarks">
+      <i class="fas fa-book" style="font-size: 32px"></i>
+    </a>
+  {{/if}}
 </div>
 
 <script>
@@ -45,14 +50,12 @@
     var data = {}
     var userID = $(this).attr('data-userId');
     var feedID = $(this).attr('data-feed-id')
-    console.log(userID, feedID, 'id')
     if (!userID) {
       var toast = new Toast('rgba(152, 22, 22, 01)', 'rgba(255, 255, 255, 1)');
       toast.show('You need to login to bookmark this news')
     } else {
       data.userID = userID;
       data.feedID = feedID;
-      console.log(window.location.hostname)
 
       $.ajax({
         type: 'POST',
