--- a/views/board/index.handlebars
+++ b/views/board/index.handlebars
@@ -46,8 +46,8 @@
 
 
 {{#if usernameAuth.username}}
-<a class="fixed-bottom m-4" style="right: 20px;left: auto" href="/story/1">
-  <i class="fas fa-plus-square" style="font-size: 32px"></i>
+<a class="fixed-bottom m-4" style="right: 20px;left: auto" href="/bookmarks">
+  <i class="fas fa-book" style="font-size: 32px"></i>
 </a>{{/if}}
 
 <script>
