--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -166,7 +166,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-lg-6 mb-3">
+      {{!-- <div class="col-12 col-lg-6 mb-3">
         <div class="card bg-dark p-4">
           <div class="card-body">
             <h5 class="card-title">STORY</h5>
@@ -174,7 +174,7 @@
             <a href="/story/1" class="btn btn-primary">storybook</a>
           </div>
         </div>
-      </div>
+      </div> --}}
     </div>
   </div>
 </section>
