--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -80,13 +80,11 @@
         or
       </div>
       <div class="row justify-content-center mb-3">
-        <a href="/auth/google">
-          <div class="google-btn">
-            <div class="google-icon-wrapper">
-              <img class="google-icon" src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"/>
-            </div>
-            <p class="btn-text"><b>Sign in with google</b></p>
-          </div>
+        <a href="/auth/facebook" class="d-flex justify-content-center col-12 m-b-2">
+          <button class="social-signin facebook">Log in with facebook</button>
+        </a>
+        <a href="/auth/google" class="d-flex justify-content-center col-12 m-b-2">
+          <button class="social-signin google">Log in with Google+</button> 
         </a>
       </div>
     </div>
