--- a/views/partials/_loader.handlebars
+++ b/views/partials/_loader.handlebars
@@ -1,4 +1,12 @@
-<div class="full-screen" id="loader-screen">
+<div style="
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 100000;
+">
+  <div class="full-screen" id="loader-screen">
   <div id="loader">
   <span></span>
   <span></span>
@@ -15,5 +23,6 @@
   <span></span>
   <span></span>
   <span></span>
+</div>
 </div>
 </div>
