--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,7 +40,7 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jodit/3.1.39/jodit.min.css">
 
   <script>
-    $(document).ready(function () {
+    $(window).load(function () {
       $("#loader-screen").hide();
       $("#main").show();
     });
