--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,10 +40,10 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jodit/3.1.39/jodit.min.css">
 
   <script>
-    $(window).on('load',function () {
-      $("#loader-screen").hide();
-      $("#main").show();
-    });
+    $(document).ready(function() { 
+        $("#loader-screen").hide();
+          $("#main").show();
+});
   </script>
   <!-- Custom styles for this template -->
   <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
