--- a/views/partials/_loader.handlebars
+++ b/views/partials/_loader.handlebars
@@ -5,8 +5,8 @@
     width: 100%;
     height: 100%;
     z-index: 100000;
-">
-  <div class="full-screen" id="loader-screen">
+"  id="loader-screen">
+  <div class="full-screen">
   <div id="loader">
   <span></span>
   <span></span>
