upload fb login

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -86,24 +86,14 @@
       });
     }
   </script>
-  <div id="fb-root"></div>
-<div id="fb-root"></div>
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0&appId=231287747465787&autoLogAppEvents=1';
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
-
+  
 <script>
   window.fbAsyncInit = function() {
     FB.init({
       appId      : '223715935095663',
       cookie     : true,
       xfbml      : true,
-      version    : '3.0'
+      version    : 'v3.0'
     });
       
     FB.AppEvents.logPageView();   
@@ -117,10 +107,15 @@
      js.src = "https://connect.facebook.net/en_US/sdk.js";
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
-   
-FB.getLoginStatus(function(response) {
+
+   FB.getLoginStatus(function(response) {
     statusChangeCallback(response);
 });
+</script>
+
+<script>
+
+  
 </script>
 </body>
 
