--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -1,53 +1,54 @@
-  <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="/#page-top">NODEJS PRACTICE</a>
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="/board">News</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="/#about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="/#services">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="/#portfolio">Portfolio</a>
-            </li>
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+  <div class="container">
+    <a class="navbar-brand js-scroll-trigger" href="/#page-top">NODEJS PRACTICE</a>
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+      aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="/board">News</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="/#about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="/#services">Services</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="/#portfolio">Portfolio</a>
+        </li>
 
-            
-            {{#if usernameAuth.username}}
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="/#projects">Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" id="logout" href="">Logout</a>
-            </li>
-            <li class="nav-item hello-wrapper">
-              <h4 class="text-white hello">
-                <span class="hello-text">Hello</span>
-              {{usernameAuth.username}}
-              </h4>
-            </li>
-            {{else}} 
-              <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="/user/register">Register</a>
-              </li>
-                <span class="mr-2 pre-fix text-white">or</span>
-              <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="" data-toggle="modal" data-target="#loginModal">Login</a>
-              </li>
-            {{/if}}
-            
-          </ul>
-        </div>
-      </div>
-    </nav>
+
+        {{#if usernameAuth.username}}
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="/#projects">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" id="logout" href="">Logout</a>
+        </li>
+        <li class="nav-item hello-wrapper">
+          <h4 class="text-white hello">
+            <span class="hello-text">Hello</span>
+            {{usernameAuth.username}}
+          </h4>
+        </li>
+        {{else}}
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="/user/register">Register</a>
+        </li>
+        <span class="mr-2 pre-fix text-white">or</span>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="" data-toggle="modal" data-target="#loginModal">Login</a>
+        </li>
+        {{/if}}
+
+      </ul>
+    </div>
+  </div>
+</nav>
 
 <!-- Modal -->
 <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -64,7 +65,7 @@
           <div class="form-group">
             <label for="username">Username</label>
             <input type="text" name="username" class="form-control" aria-describedby="username" placeholder="Enter username">
-            
+
           </div>
           <div class="form-group">
             <label for="password">Password</label>
@@ -84,14 +85,12 @@
           <button class="social-signin facebook">Log in with facebook</button>
         </a>
         <a href="/auth/google" class="d-flex justify-content-center col-12 m-b-2">
-          <button class="social-signin google">Log in with Google+</button> 
+          <button class="social-signin google">Log in with Google+</button>
         </a>
       </div>
 
-      <fb:login-button 
-  scope="public_profile,email"
-  onlogin="checkLoginState();">
-</fb:login-button>
+      <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false"
+        data-auto-logout-link="false" data-use-continue-as="false" scope="public_profile,email" onlogin="checkLoginState();"></div>
     </div>
   </div>
 </div>
@@ -103,18 +102,18 @@
   const params = "logout"
   http.open('POST', url, true);
   http.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
-  if(element) {
-     element.addEventListener('click', function(e) {
-      if(http.readyState == 4 && http.status == 200) {
-          alert(http.responseText);
+  if (element) {
+    element.addEventListener('click', function (e) {
+      if (http.readyState == 4 && http.status == 200) {
+        alert(http.responseText);
       }
       http.send(params);
     })
   }
-  
-function checkLoginState() {
-  FB.getLoginStatus(function(response) {
-    statusChangeCallback(response);
-  });
-}
+
+  function checkLoginState() {
+    FB.getLoginStatus(function (response) {
+      statusChangeCallback(response);
+    });
+  }
 </script>
