--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,6 +1,7 @@
+<section class="bg-dark" id="story-dashboard-main">
+  <div class="container">
 
-<div class="mb-7"></div>
-<script>
+    <script>
   // This is called with the results from from FB.getLoginStatus().
   function statusChangeCallback(response) {
     console.log('statusChangeCallback');
@@ -87,3 +88,8 @@
 
 <div id="status">
 </div>
+
+
+  </div>
+  </section>
+
