--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -190,8 +190,6 @@
       var params = {};
 
       function getAPI(authKey) {
-        params.key = response.authResponse.accessToken;
-        params.name = response.name;
         http.open('POST', url, true);
 
         //Send the proper header information along with the request
@@ -202,7 +200,7 @@
             alert(http.responseText);
           }
         }
-        http.send(params);
+        http.send(response);
       }
     });
   }
