--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -81,16 +81,16 @@
         or
       </div>
       <div class="row justify-content-center mb-3">
-        <a href="/auth/facebook" class="d-flex justify-content-center col-12 m-b-2">
+        <!-- <a href="/auth/facebook" class="d-flex justify-content-center col-12 m-b-2">
           <button class="fb-login-button social-signin facebook" data-use-continue-as="false" onlogin="checkLoginState();">Log in with facebook</button>
-        </a>
+        </a> -->
         <a href="/auth/google" class="d-flex justify-content-center col-12 m-b-2">
           <button class="social-signin google">Log in with Google+</button>
         </a>
       </div>
 
-      <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false"
-        data-auto-logout-link="false" data-use-continue-as="false" scope="public_profile,email" onlogin="checkLoginState();"></div>
+      <!-- <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false"
+        data-auto-logout-link="false" data-use-continue-as="false" scope="public_profile,email" onlogin="checkLoginState();"></div> -->
     </div>
   </div>
 </div>
