add facebook sdk

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -50,6 +50,7 @@
 </head>
 
 <body id="page-top">
+  <script src="/js/facebooksdk.js"></script>
   <div class="page" id="main">
 
     {{> _navbar}} {{{body}}} {{> _toast}}
@@ -86,17 +87,6 @@
       });
     }
   </script>
-  
-<script>
-  // Load the SDK asynchronously
-  (function (d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s);
-    js.id = id;
-    js.src = "https://connect.facebook.net/en_US/sdk.js";
-    fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));
   
 </script>
 </body>
