--- a/views/board/feed-detail.handlebars
+++ b/views/board/feed-detail.handlebars
@@ -10,7 +10,7 @@
       </div>
     </div>
   </div>
-  <div class="fb-comments fb-like-share bg-white" data-href="https://node4newbie.herokuapp.com/feed/{{feed._id}}" data-numposts="20"></div>
+  <div class="fb-comments fb-like-share bg-white fb-cmt"  data-href="https://node4newbie.herokuapp.com/feed/{{feed._id}}" data-numposts="20"></div>
 </section>
 <div class="fixed-bottom m-4 side-bar-tool">
   
